# kfda-mcp

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: api-endpoints.md
src/kfda_mcp/: __init__.py  server.py
